<?xml version="1.0" encoding="utf-8"?>
<ViewAnimator
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/questionFragmentAnimator"
        tools:context=".ui.MainActivity"
        android:inAnimation="@anim/slide_in_right"
        android:outAnimation="@anim/slide_out_left"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TextView
            android:text="@string/loading"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    <TextView
            android:id="@+id/questionFragmentErrorLoadingTextView"
            android:text="@string/error_loading_questions"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <FrameLayout
                android:background="@color/primary_dark"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <androidx.cardview.widget.CardView
                    android:id="@+id/card_view"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:layout_margin="6dp"
                    app:cardCornerRadius="4dp">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:id="@+id/questionFragmentText"
                        android:padding="10dp"
                        tools:text="Egg or chicken?"/>
            </androidx.cardview.widget.CardView>
        </FrameLayout>
        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/questionFragmentRecycler"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="0dp"/>
        <Button
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:enabled="false"
                android:id="@+id/questionFragmentAnswerQuestion"
                android:text="@string/send_answer"/>
    </LinearLayout>
    <TextView
            android:text="@string/sending"
            android:gravity="center"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent"
            android:layout_marginBottom="40dp">
        <TextView
                android:padding="10dp"
                android:gravity="center"
                android:text="@string/success_sending"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <TextView
                android:padding="10dp"
                android:gravity="center"
                android:id="@+id/questionFragmentCorrectAnswer"
                android:text="@string/correct_answer"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <TextView
                android:padding="10dp"
                android:gravity="center"
                android:id="@+id/questionFragmentWrongAnswer"
                android:text="@string/wrong_answer"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <Button
                android:padding="10dp"
                android:gravity="center"
                android:id="@+id/questionFragmentNextQuestion"
                android:text="@string/next_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <Button
                android:padding="10dp"
                android:gravity="center"
                android:id="@+id/questionFragmentShowResults"
                android:text="@string/show_results"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </LinearLayout>
</ViewAnimator>